fixed sideresult results scrolling behind searchbar

--- a/src/app/pages/portal/portal.component.scss
+++ b/src/app/pages/portal/portal.component.scss
@@ -47,7 +47,7 @@ igo-search-bar {
 
   @include mobile {
     width: $search-bar-width-mobile;
-    max-width: 350px;
+    max-width: 360px;
   }
 }
 
